# dinnye

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  dinnye.wasm  index.html
.github/workflows/: cross_build.yml  windows_alt_build.yml  windows_build.yml
docs/: rsqrt.md
src/common/: sim.cc  sim.hh
src/native/: audio.cc  audio.hh  fda.h  font.cc  font.hh  image.cc  image.hh  input.cc  input.hh  menu.cc  menu.hh  miyoo_audio.cc  miyoo_audio.hh  planets.cc  platform.cc  platform.hh  renderer.cc  renderer.hh  roboto.cc  serialization.cc  serialization.hh  util.cc  util.hh
src/wasm/: dinnye.cc
tools/: sheet_cutter.py
wasm/: dinnye.cc  external.syms
web/js/: ds.js
